Basic functionality and styling work

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="container">
+    <div class="span9">
+      <br />
 
-<%= yield %>
+  <%= yield %>
+
+    </div>
+  </div>
 
 </body>
 </html>
