--- a/app/views/csv_importers/import.html.erb
+++ b/app/views/csv_importers/import.html.erb
@@ -1,4 +1,5 @@
 <% if @matched_column.present? %>
+  <% if @results.present? %>
 
   <table class="table table-striped table-bordered table-condensed">
     <thead>
@@ -16,29 +17,40 @@
       <% end %>
     </tbody>
   </table>
-
+  <% else %>
+  <h3>No matches found for column '<%= @column %>'</h3>
+  <h3>between files <%= @csv1name %> and <%= @csv2name %>.</h3>
+  <br />
+  <h4>Remember that column names are case-sensitive.</h4>
+  <% end %>
 <% else %>
-
-  <table class="table table-striped table-bordered table-condensed">
-    <thead>
-      <tr>
-        <th><%= @column %></th>
-        <% @results.first.last.keys.each do |key| %>
-          <th><%= key %></th>
+  <% if @results.first.present? %>
+    <table class="table table-striped table-bordered table-condensed">
+      <thead>
+        <tr>
+          <th><%= @column %></th>
+          <% @results.first.last.keys.each do |key| %>
+            <th><%= key %></th>
+          <% end %>
+        </tr>
+      </thead>
+      <tbody>
+        <% @results.each do |result| %>
+        <tr>
+          <td><%= result.first %></td>
+          <% result.last.values.each do |value| %>
+            <td><%= value %></td>
+          <% end %>
+        </tr>
         <% end %>
-      </tr>
-    </thead>
-    <tbody>
-      <% @results.each do |result| %>
-      <tr>
-        <td><%= result.first %></td>
-        <% result.last.values.each do |value| %>
-          <td><%= value %></td>
-        <% end %>
-      </tr>
-      <% end %>
-    </tbody>
+      </tbody>
 
-  </table>
+    </table>
+  <% else %>
+  <h3>No matches found for column '<%= @column %>'</h3>
+  <h3>between files <%= @csv1name %> and <%= @csv2name %>.</h3>
+  <br />
+  <h4>Remember that column names are case-sensitive.</h4>
+  <% end %>
 
 <% end %>
