--- a/app/views/csv_importers/import.html.erb
+++ b/app/views/csv_importers/import.html.erb
@@ -18,7 +18,7 @@
     </tbody>
   </table>
   <% else %>
-  <h3>No matches found for column '<%= @column %>'</h3>
+  <h3>No matches found for columns '<%= @column %>' and <%= @matched_column %>'</h3>
   <h3>between files <%= @csv1name %> and <%= @csv2name %>.</h3>
   <br />
   <h4>Remember that column names are case-sensitive.</h4>
